[gd_scene load_steps=40 format=3 uid="uid://b2583nux4sbd3"]

[ext_resource type="Texture2D" uid="uid://dcfffm0vh7e1e" path="res://assets/sheets/DinoSprites - tard.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://d2smhj1bogeeq" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://bwaybgxxr8kyi" path="res://assets/sheets/DinoSprites - mort.png" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://blg1bdd76xg52" path="res://scripts/death_handler.gd" id="4_dqkch"]
[ext_resource type="Script" uid="uid://cysbnp5qh1iog" path="res://scripts/health_handler.gd" id="5_tuyoq"]
[ext_resource type="Script" uid="uid://d4lwkkbeargbc" path="res://scripts/hit_box.gd" id="6_fjrip"]
[ext_resource type="AudioStream" uid="uid://b7r1roj25rnyb" path="res://assets/sounds/jump.mp3" id="7_ss7kx"]
[ext_resource type="AudioStream" uid="uid://buvj5j22unb61" path="res://assets/sounds/death.mp3" id="8_c5rqy"]
[ext_resource type="AudioStream" uid="uid://c1djhrlnrjf2n" path="res://assets/sounds/hurt.mp3" id="9_73kkf"]
[ext_resource type="AudioStream" uid="uid://bpuqjm5ksmnbr" path="res://assets/sounds/fire_ball.mp3" id="9_b6tgf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("1_3vyb7")
region = Rect2(384, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_3vyb7")
region = Rect2(264, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_qhqgy")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("3_qhqgy")
region = Rect2(384, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("3_qhqgy")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("3_qhqgy")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("3_qhqgy")
region = Rect2(264, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("3_qhqgy")
region = Rect2(408, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("3_qhqgy")
region = Rect2(432, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("3_qhqgy")
region = Rect2(456, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("3_qhqgy")
region = Rect2(480, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("3_qhqgy")
region = Rect2(504, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("3_qhqgy")
region = Rect2(528, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("3_qhqgy")
region = Rect2(552, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("1_3vyb7")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("1_3vyb7")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": false,
"name": &"death",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": false,
"name": &"p_death",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}],
"loop": true,
"name": &"p_idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}],
"loop": true,
"name": &"p_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}],
"loop": true,
"name": &"p_run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fjrip"]
radius = 6.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tuyoq"]
radius = 6.0

[node name="CharacterBody2D" type="CharacterBody2D" node_paths=PackedStringArray("health_handler")]
z_index = 5
collision_layer = 2
script = ExtResource("1_g2els")
health_handler = NodePath("HealthHandler")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -9)
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"death"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_fjrip")

[node name="Spawn" type="Marker2D" parent="."]
position = Vector2(14, -9)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -9)
zoom = Vector2(4, 4)
limit_bottom = 100
position_smoothing_enabled = true

[node name="DeathHandler" type="Node2D" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("4_dqkch")
parent = NodePath("..")
metadata/_custom_type_script = "uid://blg1bdd76xg52"

[node name="HealthHandler" type="Node2D" parent="." node_paths=PackedStringArray("parent", "death_handler", "animated_sprite")]
script = ExtResource("5_tuyoq")
parent = NodePath("..")
death_handler = NodePath("../DeathHandler")
animated_sprite = NodePath("../AnimatedSprite2D")
metadata/_custom_type_script = "uid://cysbnp5qh1iog"

[node name="HitBox" type="Area2D" parent="." node_paths=PackedStringArray("health_handler", "parent")]
script = ExtResource("6_fjrip")
health_handler = NodePath("../HealthHandler")
parent = NodePath("..")
metadata/_custom_type_script = "uid://d4lwkkbeargbc"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_tuyoq")

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ss7kx")
volume_db = -20.0
pitch_scale = 1.5

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_c5rqy")
volume_db = -20.0
pitch_scale = 1.5

[node name="hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_73kkf")
volume_db = -15.0
pitch_scale = 2.01

[node name="shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_b6tgf")
volume_db = -11.922
pitch_scale = 3.2
